--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             <button type="button" onclick="bool = false; tester()">sad</button>
         </div>
     </div> 
+
+    <button id="theButton">Click me</button>
     
 <script src="js/script.js"></script>
 </body>
